<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/screen_padding_horizontal"
    android:paddingEnd="@dimen/screen_padding_horizontal"
    android:paddingTop="@dimen/screen_padding_vertical"
    android:paddingBottom="@dimen/screen_padding_vertical"
    tools:context=".ui.auth.view.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <!-- Logo -->
        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/app_logo"
            />

        <!-- App Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textSize="22sp"
            android:fontFamily="sans-serif"
            android:layout_marginTop="12dp"/>

        <!-- Email -->
        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:padding="12dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="24dp" />

        <!-- Password -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:padding="12dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <ImageButton
                android:id="@+id/togglePasswordVisibility"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/toggle_password"
                android:src="@drawable/baseline_visibility_off_24"
                android:scaleType="centerInside"
                android:padding="16dp"/>
        </LinearLayout>


        <!-- Login Button -->
        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="16dp"/>

        <!-- Forgot Password -->
        <TextView
            android:id="@+id/forgotPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_marginTop="16dp" />

        <!-- Sign Up -->
        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackground"
            android:textColor="@android:color/holo_blue_dark"/>

        <!-- Social Login Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/googleLoginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google" />

            <Button
                android:id="@+id/facebookLoginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facebook"
                android:layout_marginStart="12dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
